--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,8 @@
 [bumpversion]
-current_version = 1.25.1
-files = setup.py conda-recipe/meta.yaml io3d/__init__.py
+current_version = 0.1.0
+files = Project.toml
 commit = True
 tag = True
-tag_name = {new_version}
+tag_name = v{new_version}
 
-[nosetests]
-attr = !interactive,!slow,!dataset
 
