--- a/.travis.yml
+++ b/.travis.yml
@@ -36,10 +36,10 @@ install:
   - conda config --add channels mjirik
   # download training data
   #    - mkdir -p ~/data/medical/orig
-  #    - wget http://home.zcu.cz/~mjirik/lisa/sample-data/io3d_sample_data.zip
-  #    - unzip -d ~/data/medical/orig/ io3d_sample_data.zip
+  #    - wget http://home.zcu.cz/~mjirik/lisa/sample-data/Io3dP_sample_data.zip
+  #    - unzip -d ~/data/medical/orig/ Io3dP_sample_data.zip
   # command to install dependencies
-  - conda create --yes -n travis pip nose python=$CONDA_PYTHON_VERSION io3d SimpleITK
+  - conda create --yes -n travis pip nose python=$CONDA_PYTHON_VERSION Io3dP SimpleITK
   - source activate travis
   - export PYTHON=`which python`
   - julia -e 'using Pkg; Pkg.build("PyCall")'
