--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Io3dP"
+name = "Pio3d"
 uuid = "276a7f50-ef14-5ff6-a3e3-20ef51d5e3d7"
 authors = ["Miroslav Jirik <miroslav.jirik@gmail.com>"]
 version = "0.0.1"
